--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		     <https://validator.w3.org/nu/#textarea>
          [Accessed 4 December 2021].
          -->
-      <!-- The align attribute on the div element is obsolete, used CSS instead. -->
+      <!-- The align attribute on the div element is obsolete, we should use CSS instead. -->
       <div>Deprecated code sample.</div>
     </aside>
 
@@ -115,7 +115,7 @@
 		 <https://validator.w3.org/nu/#textarea>
      [Accessed 4 December 2021].
      -->
-  <!-- Footer was located outside the body, causing stray start tag error. -->
+  <!-- Footer was located outside the body, causing a stray start tag error. -->
   <footer>
     &copy; Arian Najafi Yamchelo
     <script>document.write(new Date().getFullYear());</script><noscript>1989</noscript>.
