--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
     <!-- link locations: relative to e54061's public_html directory -->
     <a href="/~e54061/wp" target="_blank">Course Homepage</a> |
     <a href="/~e54061/wp/lectures" target="_blank">Lectures 0 - 11</a> |
-    <a href="/~e54061/secure" target="_blank">Secure Resources Area</a> |
-    <!-- link location: external -->
-    <a href='https://drive.google.com/open?id=1uSRn6PHDcpsUtmFQ6MPMM-g2go4o22VP' target="_blank">Course Materials</a>
+    <a href="/~e54061/secure" target="_blank">Secure Resources Area</a> 
   </nav>
 
   <main>
@@ -120,7 +118,7 @@
     &copy; Arian Najafi Yamchelo
     <script>document.write(new Date().getFullYear());</script><noscript>1989</noscript>.
     <a href='https://github.com/aryna93/wp' target='_blank'>GitHub Repository</a>
-    <a href='https://www.linkedin.com/in/arian-najafi-yamchelo-96a41287/' target='_blank'>Linkedin Profile</a>
+    <a href='https://www.linkedin.com/in/arian-najafi-yamchelo/' target='_blank'>Linkedin Profile</a>
     <button id='toggleWireframeCSS' onclick='toggleWireframe()'>Toggle Wireframe CSS</button>
   </footer>
 
